# writing-app

./: .gitignore  .prettierignore  .prettierrc  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: architecture.md  project-format.md  roadmap.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backups.rs  inspector.rs  lib.rs  main.rs  search_export.rs  time.rs
src-tauri/src/binder/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/documents/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/filesystem/: mod.rs
src-tauri/src/locks/: mod.rs
src-tauri/src/migrations/: mod.rs
src-tauri/src/project/: mod.rs
src/lib/components/binder/: BinderTree.svelte
src/lib/components/board/: BoardView.svelte
src/lib/components/editor/: RichTextEditor.svelte
src/lib/components/outline/: OutlineView.svelte
src/lib/config/: app.ts
src/lib/schemas/: backup.test.ts  backup.ts  binder.test.ts  binder.ts  document.test.ts  document.ts  inspector.test.ts  inspector.ts  project.test.ts  project.ts  searchExport.test.ts  searchExport.ts
src/lib/services/commands/: backup.ts  binder.ts  document.ts  inspector.ts  project.ts  runtime.ts  searchExport.ts
src/routes/: +page.svelte
tests/e2e/: board-outline.spec.ts  editor-persistence.spec.ts  open-project.spec.ts  search-export.spec.ts  smoke.spec.ts
(+8 files in other folders)
