[package]
name = "local-writer"
version = "0.1.0"
description = "Local-first desktop writing application"
authors = ["Local Writer Contributors"]
edition = "2021"
rust-version = "1.85"

[lib]
name = "local_writer"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.8.5", features = [] }
thiserror = "2.0.12"
time = { version = "0.3.49", features = ["formatting", "macros", "serde"] }
uuid = { version = "1.23.3", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.25.0"
